--- a/src/login.html
+++ b/src/login.html
@@ -15,7 +15,7 @@
   </script>
   <script src="./libs/zepto.min.js"></script>
   <script src="./libs/template-web.js"></script>
-  <script src="./libs/isscroll-probe.js"></script>
+  <script src="./libs/iscroll-probe.js"></script>
   <script src="./script/login.js"></script>
 </body>
 </html>
