--- a/src/search.html
+++ b/src/search.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style/login.css">
+  <link rel="stylesheet" href="./style/search.css">
   <link rel="stylesheet" href="./libs/swiper-3.4.2.min.css">
   <title>安德玛</title>
 </head>
@@ -15,9 +15,8 @@
     }, false)
   </script>
   <script src="./libs/zepto.min.js"></script>
-  <script src="./libs/swiper-3.4.2.jquery.min.js"></script>
+  
   <script src="./libs/template-web.js"></script>
-  <script src="./libs/iscroll-probe.js"></script>
-  <script src="./script/login.js"></script>
+  <script src="./script/search.js"></script>
 </body>
 </html>
