--- a/src/myShoppingCart.html
+++ b/src/myShoppingCart.html
@@ -7,7 +7,11 @@
 		<title>安德玛</title>
 	</head>
 	<body>	
-		asdfa
+		<script>
+		    document.addEventListener('touchmove', function(e){
+		      e.preventDefault()
+		    }, false)
+		</script>
 		<script src="./libs/zepto.min.js"></script>
   		<script src="./libs/template-web.js"></script>
   		<script src="./libs/iscroll-probe.js"></script>
