--- a/src/details.html
+++ b/src/details.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<link rel="stylesheet" type="text/css" href="./style/myShoppingCart.css"/>
+		<link rel="stylesheet" type="text/css" href="./style/details.css"/>
+		<link rel="stylesheet" type="text/css" href="./libs/swiper-3.4.2.min.css"/>
 		<title>安德玛</title>
 	</head>
 	<body>	
@@ -13,8 +14,9 @@
 		    }, false)
 		</script>
 		<script src="./libs/zepto.min.js"></script>
+		<script src="./libs/swiper-3.4.2.jquery.min.js" type="text/javascript" charset="utf-8"></script>
   		<script src="./libs/template-web.js"></script>
   		<script src="./libs/iscroll-probe.js"></script>
-		<script src="./script/myShoppingCart.js"></script>
+		<script src="./script/details.js"></script>
 	</body>
 </html>
